--- a/thanks.html
+++ b/thanks.html
@@ -1,8 +1,11 @@
-	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+---
+permalink: /thanks/
+---
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 	<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Contact</title>
+	<title>Contact - thanks</title>
 
 	<meta name="description" content=" " />
 
@@ -19,7 +22,7 @@
 	@import url("css/main.css");
 	-->
 	</style>
-  </head>
+	    </head>
 
 	<body>
 
@@ -32,36 +35,10 @@
 			<p> <a href="index.php.html">home</a> | <a href="thumbs.php%3Fcat=20.html">Painted memory (photos)</a> | <a href="thumbs.php%3Fcat=1.html">Floating Scrolls</a> | <a href="thumbs.php%3Fcat=2.html">After Hiroshima</a> | <a href="thumbs.php%3Fcat=14.html">After Hiroshima Drawings</a> | <a href="thumbs.php%3Fcat=6.html">Genteel Noir</a> | <a href="thumbs.php%3Fcat=16.html">Genteel Prints</a> | <a href="thumbs.php%3Fcat=17.html">Genteel Koblenz</a> | <a href="thumbs.php%3Fcat=11.html">Ghost Objects</a> | <a href="thumbs.php%3Fcat=3.html">Images of Slavery</a> | <a href="thumbs.php%3Fcat=12.html">Imperial War Museum</a> | <a href="thumbs.php%3Fcat=4.html">Museum Shoes</a> | <a href="thumbs.php%3Fcat=8.html">Shadow Drawings</a> | <a href="thumbs.php%3Fcat=5.html">Tales from the Boarders</a> | <a href="thumbs.php%3Fcat=13.html">Torn Shoes</a> | <a href="thumbs.php%3Fcat=18.html">The Visible Body</a> | <a href="thumbs.php%3Fcat=9.html"></a> | <a href="contact.php.html">contact</a></p>	  </div>
 		<a name="content"></a>
 		<div id="main">
-		<!--	<h1><a href="/index.php" title="Return to the home page" accesskey="1" class="homeLink">Gunilla Treen</a></h1> -->
+
+			<p>Thanks for your message!</p>
 
 
-		<form action="contact.php.html" method="post" name="contact">
-	<fieldset>
-	<legend>Contact</legend>
-	<input type="hidden" name="submitted" value="yes" />
-    <label for="feedback">Your message<span class="required">*</span>:</label>
-	<span id="sprytextarea1">
-	<textarea name="feedback" rows="5" cols="35" id="feedback"></textarea>
-    <span class="textareaRequiredMsg">A value is required.</span><span class="textareaMaxCharsMsg">Exceeded maximum number of characters.</span><span class="textareaMinCharsMsg">Minimum number of characters not met.</span></span>&nbsp;<br />
-    	<label for="name">Your name<span class="required">*</span>:</label>
-	<span id="sprytextfield1">
-    <input type="text" name="name" value="" size="40" maxlength="250" id="name" />
-    <span class="textfieldRequiredMsg">A value is required.</span><span class="textfieldMinCharsMsg">Minimum number of characters not met.</span><span class="textfieldMaxCharsMsg">Exceeded maximum number of characters.</span></span>&nbsp;<br />
-    	<label for="email">Your email<span class="required">*</span>:</label>
-	<span id="sprytextfield2">
-    <input type="text" name="email" value="" size="40" maxlength="250" id="email" />
-    <span class="textfieldRequiredMsg">A value is required.</span><span class="textfieldInvalidFormatMsg">Invalid format.</span><span class="textfieldMinCharsMsg">Minimum number of characters not met.</span><span class="textfieldMaxCharsMsg">Exceeded maximum number of characters.</span></span>&nbsp;<br />
-		<input type="submit" name="Submit" value="Send" />
-	</fieldset>
-	</form>
-	<p><span class="required">*</span> required</p>
-    <script type="text/javascript">
-	<!--
-	var sprytextfield1 = new Spry.Widget.ValidationTextField("sprytextfield1", "none", {minChars:2, maxChars:100});
-	var sprytextfield2 = new Spry.Widget.ValidationTextField("sprytextfield2", "email", {minChars:5, maxChars:200});
-	var sprytextarea1 = new Spry.Widget.ValidationTextarea("sprytextarea1", {maxChars:500, minChars:2, useCharacterMasking:false});
-	//-->
-	</script>
 
 
 	</div> <!-- end main -->
