Fix contact form - add Google recaptchi to head

--- a/thanks.html
+++ b/thanks.html
@@ -6,17 +6,11 @@ permalink: /thanks/
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Contact - thanks</title>
-
-	<meta name="description" content=" " />
-
-	<meta name="keywords" content=" " />
-		<meta http-equiv="imagetoolbar" content="no" />
-	<meta content="TRUE" name="MSSmartTagsPreventParsing" />
 	<meta name="author" content="Eye Division" />
 	<meta name="Copyright" content="Copyright (c) Anne Teahan" />
-	<meta http-equiv="Expires" content="-1" />
-	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="css/basic.css" />
+
+	<link rel="stylesheet" type="text/css" media="print" href="/css/print.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="/css/basic.css" />
 	<style type="text/css" media="screen">
 	<!--
 	@import url("css/main.css");
@@ -26,13 +20,13 @@ permalink: /thanks/
 
 	<body>
 
-	<span style="display:none">:<a href="contact.php.html#content" title="Skip past navigation to page content" tabindex="1" accesskey="2"><img src="images/spacer.gif" width="1" height="1" alt="Skip to content" border="0" /></a></span>
+	<span style="display:none">:<a href="contact.php.html#content" title="Skip past navigation to page content" tabindex="1" accesskey="2"><img src="/images/spacer.gif" width="1" height="1" alt="Skip to content" border="0" /></a></span>
 		<a name="top"></a>
 		<div id="container">
 	<div id="content">
 		<div id="topnav">
 					<h1>Anne Teahan</h1>
-			<p> <a href="index.php.html">home</a> | <a href="thumbs.php%3Fcat=20.html">Painted Portraits</a> | <a href="thumbs.php%3Fcat=1.html">Floating Scrolls</a> | <a href="thumbs.php%3Fcat=2.html">After Hiroshima</a> | <a href="thumbs.php%3Fcat=14.html">After Hiroshima Drawings</a> | <a href="thumbs.php%3Fcat=6.html">Genteel Noir</a> | <a href="thumbs.php%3Fcat=16.html">Genteel Prints</a> | <a href="thumbs.php%3Fcat=17.html">Genteel Koblenz</a> | <a href="thumbs.php%3Fcat=11.html">Ghost Objects</a> | <a href="thumbs.php%3Fcat=3.html">Images of Slavery</a> | <a href="thumbs.php%3Fcat=12.html">Imperial War Museum</a> | <a href="thumbs.php%3Fcat=4.html">Museum Shoes</a> | <a href="thumbs.php%3Fcat=8.html">Shadow Drawings</a> | <a href="thumbs.php%3Fcat=5.html">Tales from the Boarders</a> | <a href="thumbs.php%3Fcat=13.html">Torn Shoes</a> | <a href="thumbs.php%3Fcat=18.html">The Visible Body</a> | <a href="thumbs.php%3Fcat=9.html"></a> | <a href="contact.php.html">contact</a></p>	  </div>
+			<p> <a href="/index.php.html">home</a> | <a href="/thumbs.php%3Fcat=20.html">Painted Portraits</a> | <a href="/thumbs.php%3Fcat=1.html">Floating Scrolls</a> | <a href="/thumbs.php%3Fcat=2.html">After Hiroshima</a> | <a href="/thumbs.php%3Fcat=14.html">After Hiroshima Drawings</a> | <a href="/thumbs.php%3Fcat=6.html">Genteel Noir</a> | <a href="/thumbs.php%3Fcat=16.html">Genteel Prints</a> | <a href="/thumbs.php%3Fcat=17.html">Genteel Koblenz</a> | <a href="/thumbs.php%3Fcat=11.html">Ghost Objects</a> | <a href="/thumbs.php%3Fcat=3.html">Images of Slavery</a> | <a href="/thumbs.php%3Fcat=12.html">Imperial War Museum</a> | <a href="/thumbs.php%3Fcat=4.html">Museum Shoes</a> | <a href="/thumbs.php%3Fcat=8.html">Shadow Drawings</a> | <a href="/thumbs.php%3Fcat=5.html">Tales from the Boarders</a> | <a href="/thumbs.php%3Fcat=13.html">Torn Shoes</a> | <a href="thumbs.php%3Fcat=18.html">The Visible Body</a> | <a href="/thumbs.php%3Fcat=9.html"></a> | <a href="/contact.php.html">contact</a></p>	  </div>
 		<a name="content"></a>
 		<div id="main">
 
@@ -42,7 +36,7 @@ permalink: /thanks/
 
 
 	</div> <!-- end main -->
-		<div id="credits"><a href="contact.php.html" title="Send feedback" accesskey="9">contact</a> | <a href="copyright.php.html" title="copyright information" accesskey="8">copyright &copy;</a> 2017 <img src="images/ed_logo15x15w.gif" alt="site design by Eye Division" width="15" height="15" /> <a href="http://www.eyedivision.com" title="Site by Eye Division" target="_blank">Eye Division</a>
+		<div id="credits"><a href="/contact.php.html" title="Send feedback" accesskey="9">contact</a> | <a href="copyright.php.html" title="copyright information" accesskey="8">copyright &copy;</a> 2017 <img src="/images/ed_logo15x15w.gif" alt="site design by Eye Division" width="15" height="15" /> <a href="http://www.eyedivision.com" title="Site by Eye Division" target="_blank">Eye Division</a>
 		</div>
 	</div>	<!-- end content -->
 	</div>
