--- a/contact.php.html
+++ b/contact.php.html
@@ -6,23 +6,13 @@ permalink: /contact.php.html
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Contact</title>
 
-	<meta name="description" content=" " />
-
-	<meta name="keywords" content=" " />
-		<meta http-equiv="imagetoolbar" content="no" />
-	<meta content="TRUE" name="MSSmartTagsPreventParsing" />
 	<meta name="author" content="Eye Division" />
 	<meta name="Copyright" content="Copyright (c) Anne Teahan" />
-	<meta http-equiv="Expires" content="-1" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="css/basic.css" />
-	<style type="text/css" media="screen">
-	<!--
-	@import url("css/main.css");
-	-->
-	</style>
-
-	    </head>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+	<script src='https://www.google.com/recaptcha/api.js'></script>
+  </head>
 
 	<body>
 
@@ -37,10 +27,10 @@ permalink: /contact.php.html
 		<div id="main">
 
 		<form action="/thanks/" method="post" id="contact-form">
-
+<!-- <input type="hidden" name="_to" value="anne.teahan1@btopenworld.com"> -->
       <fieldset>
 
-            <input type="hidden" name="_to" value="anne.teahan1@btopenworld.com">
+            <input type="hidden" name="_to" value="a.ward@eyedivision.com">
             <input type="hidden" name="_cc" value="a.ward@eyedivision.com">
             <input type="hidden" name="_subject" value="Web form">
             <p>
