Fixed form part 2 - real email added

--- a/contact.php.html
+++ b/contact.php.html
@@ -27,10 +27,10 @@ permalink: /contact.php.html
 		<div id="main">
 
 		<form action="/thanks/" method="post" id="contact-form">
-<!-- <input type="hidden" name="_to" value="anne.teahan1@btopenworld.com"> -->
+
       <fieldset>
 
-            <input type="hidden" name="_to" value="a.ward@eyedivision.com">
+            <input type="hidden" name="_to" value="anne.teahan1@btopenworld.com">
             <input type="hidden" name="_cc" value="a.ward@eyedivision.com">
             <input type="hidden" name="_subject" value="Web form">
             <p>
