--- a/thanks.html
+++ b/thanks.html
@@ -11,11 +11,7 @@ permalink: /thanks/
 
 	<link rel="stylesheet" type="text/css" media="print" href="/css/print.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/css/basic.css" />
-	<style type="text/css" media="screen">
-	<!--
-	@import url("css/main.css");
-	-->
-	</style>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 	    </head>
 
 	<body>
