Add more galleries to home

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
-main_image_path: "/assets/images/homepageimage.jpg"
-main_image_caption: "Floating Scroll"
+main_image_path:
+main_image_caption:
 show_carousel: false
 show_blog: false
 posts_number: 2
@@ -96,8 +96,10 @@ _comments:
 
     {% endfor %}
 
-      <!-- Galleries -->
-    {% for gallery in site.gallery %}
+    <!-- Galleries -->
+    {% assign galleries = site.gallery | sort: 'gallery_date' | reverse %}
+
+     {% for gallery in galleries %}
 
       {% if gallery.frontpage %}
 
