Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@ _comments:
   caption: optional caption
 ---
 
-
-  <div class="editable">
-
-  </div>
+<div class="editable">
+        <p>Test first bit of text</p>
+      </div>
 
     {% if page.show_carousel and page.carousel %}
     <section class="slideshow">
@@ -125,7 +124,7 @@ _comments:
     {% endfor %}
 
     <section>
-      <p><a href="/gallery/" class="post--readmore">View all galleries <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></p>
+      <p><a href="/gallery/" class="post--readmore">View all galleries <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></a></p>
     </section>
 
 
