Updated 'contact.php.html' via CloudCannon

--- a/contact.php.html
+++ b/contact.php.html
@@ -30,8 +30,7 @@ permalink: /contact.php.html
 
       <fieldset>
 
-            <input type="hidden" name="_to" value="anne.teahan1@btopenworld.com">
-            <input type="hidden" name="_cc" value="a.ward@eyedivision.com">
+            <input type="hidden" name="_to" value="anneteahan2@gmail.com">
             <input type="hidden" name="_subject" value="Web form">
             <p>
             <label for="name">Name:</label>
@@ -57,7 +56,7 @@ permalink: /contact.php.html
 
 
 	</div> <!-- end main -->
-		<div id="credits"><a href="contact.php.html" title="Send feedback" accesskey="9">contact</a> | <a href="copyright.php.html" title="copyright information" accesskey="8">copyright &copy;</a> 2017 <img src="images/ed_logo15x15w.gif" alt="site design by Eye Division" width="15" height="15" /> <a href="http://www.eyedivision.com" title="Site by Eye Division" target="_blank">Eye Division</a>
+		<div id="credits"><a href="contact.php.html" title="Send feedback" accesskey="9">contact</a> | <a href="copyright.php.html" title="copyright information" accesskey="8">copyright &copy;</a> 2017 <img src="images/ed_logo15x15w.gif" alt="site design by Eye Division" width="15" height="15" /> <a href="https://eyedivision.com" title="Site by Eye Division" target="_blank">Eye Division</a>
 		</div>
 	</div>	<!-- end content -->
 	</div>
