Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -6,26 +6,29 @@ show_carousel: false
 show_blog: false
 posts_number: 2
 carousel:
-  - image:
+  - image: /uploads/isaac-sleeps.jpg
+    caption:
+    alink:
+  - image: /uploads/at-ghost-teapot.jpg
     caption:
     alink:
 _options:
   layout:
     hidden: true
   image_path:
-    uploads_dir: "assets/images/:year"
+    uploads_dir: assets/images/:year
     width: 1200
     height: 1200
     resize_style: contain
     mime_type: image/jpeg
   main_image_path:
-    uploads_dir: "assets/images/:year"
+    uploads_dir: assets/images/:year
     width: 1200
     height: 1200
     resize_style: contain
     mime_type: image/jpeg
   content:
-    uploads_dir: "assets/:year"
+    uploads_dir: assets/:year
 _comments:
   main_image_path: Cover image
   main_image_caption: Alt text for cover image
