Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ show_blog: false
 posts_number: 2
 carousel:
   - image: /uploads/isaac-sleeps.jpg
-    caption:
+    caption: Example caption
     alink:
   - image: /uploads/at-ghost-teapot.jpg
     caption:
