Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ posts_number: 2
 carousel:
   - image: /uploads/isaac-sleeps.jpg
     caption: Example caption
-    alink:
+    alink: /gallery/painted-portraits/
   - image: /uploads/at-ghost-teapot.jpg
     caption:
     alink:
