--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: home
 main_image_path:
 main_image_caption:
 show_carousel: true
+show_galleries: false
 show_blog: false
 posts_number: 2
 carousel:
@@ -34,6 +35,7 @@ _comments:
   main_image_caption: Alt text for cover image
   carousel: Edit the slideshow
   show_carouse: Show the slideshow
+  show_galleries: Show featured galleries 
   show_blog: Show your latest posts on the homepage
   posts_number: How many posts to show
   alink: Optional web link from the slide
@@ -46,7 +48,6 @@ _comments:
 
     {% if page.show_carousel and page.carousel %}
     <section class="slideshow">
-      <h2>This is a demo slideshow</h2>
       <div class="flexslider">
           <ul class="slides">
             {% for slides in page.carousel %}
@@ -68,68 +69,71 @@ _comments:
       </section>
       {% endif %}
 
-      <!-- Regular page promotions on front page -->
-      {% for section in site.pages %}
+      {% if page.show_galleries %}
+        
+        <!-- Regular page promotions on front page -->
+        {% for section in site.pages %}
 
-      {% if section.frontpage %}
+        {% if section.frontpage %}
 
 
-        <section class="gallery--cover has--cover" style="background-image: url({% if section.main_image_path %}{{ section.main_image_path }}{% else %}'https://placekitten.com/g/1200/300'{% endif %});">
+          <section class="gallery--cover has--cover" style="background-image: url({% if section.main_image_path %}{{ section.main_image_path }}{% else %}'https://placekitten.com/g/1200/300'{% endif %});">
 
-          <a href="{{ section.url | prepend: site.baseurl }}">
+            <a href="{{ section.url | prepend: site.baseurl }}">
 
-            <div class="scrim has--cover">
-              <article class="gallery--front">
-                <header class="gallery--header">
-                  <h2 class="cover--title mb0">{{ section.frontpagetitle }}</h2>
-                </header>
-                {% if section.homepage_description_markdown %}
-                  {{ section.homepage_description_markdown | markdownify }}
-                  <span class="post--readmore">Read more <span> <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></span>
+              <div class="scrim has--cover">
+                <article class="gallery--front">
+                  <header class="gallery--header">
+                    <h2 class="cover--title mb0">{{ section.frontpagetitle }}</h2>
+                  </header>
+                  {% if section.homepage_description_markdown %}
+                    {{ section.homepage_description_markdown | markdownify }}
+                    <span class="post--readmore">Read more <span> <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></span>
 
-                {% endif %}
-            </span>
-          </article>
-          </div>
-          </a>
-        </section>
-
-      {% endif %}
-
-    {% endfor %}
-
-    <!-- Galleries -->
-    {% assign galleries = site.gallery | sort: 'gallery_date' | reverse %}
-
-     {% for gallery in galleries %}
-
-      {% if gallery.frontpage %}
-
-        <section class="gallery--cover {% if gallery.main_image_path %}has--cover{% endif %}" {% if gallery.main_image_path %}style="background-image: url({{ gallery.main_image_path | prepend: gallery.baseurl }});"{% endif %}>
-
-          <a href="{{ gallery.url }}">
-
-            <div class="scrim {% if gallery.main_image_path %}has--cover{% endif %}">
-              <article class="gallery--front">
-                <header class="gallery--header">
-                  <h2 class="cover--title mb0">{{ gallery.frontpagetitle }}</h2>
-                </header>
-                {% if gallery.homepage_description_markdown %}
-                  {{ gallery.homepage_description_markdown | markdownify }} <span class="post--readmore">View gallery  <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></span>
-                {% endif %}
-              </article>
+                  {% endif %}
+              </span>
+            </article>
             </div>
-          </a>
-        </section>
+            </a>
+          </section>
 
-      {% endif %}
+        {% endif %}
 
-    {% endfor %}
+      {% endfor %}
+
+      <!-- Galleries -->
+      {% assign galleries = site.gallery | sort: 'gallery_date' | reverse %}
+
+      {% for gallery in galleries %}
+
+        {% if gallery.frontpage %}
+
+          <section class="gallery--cover {% if gallery.main_image_path %}has--cover{% endif %}" {% if gallery.main_image_path %}style="background-image: url({{ gallery.main_image_path | prepend: gallery.baseurl }});"{% endif %}>
+
+            <a href="{{ gallery.url }}">
+
+              <div class="scrim {% if gallery.main_image_path %}has--cover{% endif %}">
+                <article class="gallery--front">
+                  <header class="gallery--header">
+                    <h2 class="cover--title mb0">{{ gallery.frontpagetitle }}</h2>
+                  </header>
+                  {% if gallery.homepage_description_markdown %}
+                    {{ gallery.homepage_description_markdown | markdownify }} <span class="post--readmore">View gallery  <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></span>
+                  {% endif %}
+                </article>
+              </div>
+            </a>
+          </section>
+
+        {% endif %}
+
+      {% endfor %}
 
     <section>
       <p><a href="/gallery/" class="post--readmore">View all galleries <svg class="icon icon--post"><use xlink:href="#icon-double_angle_right" /></svg></a></p>
     </section>
 
+    {% endif %}
 
 {% if page.show_blog %}
 
