--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ show_blog: false
 posts_number: 2
 carousel:
   - image: /uploads/isaac-sleeps.jpg
-    caption: Example caption
+    caption:
     alink: /gallery/painted-portraits/
   - image: /uploads/at-ghost-teapot.jpg
     caption:
@@ -35,7 +35,7 @@ _comments:
   main_image_caption: Alt text for cover image
   carousel: Edit the slideshow
   show_carouse: Show the slideshow
-  show_galleries: Show featured galleries 
+  show_galleries: Show featured galleries
   show_blog: Show your latest posts on the homepage
   posts_number: How many posts to show
   alink: Optional web link from the slide
