Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@ carousel:
   - image: /uploads/at-ghost-teapot.jpg
     caption:
     alink:
+  - image: /uploads/whisper-floating-scroll-2.jpg
+    caption:
+    alink:
 show_blog: false
-posts_number: 2
+posts_number:
 _options:
   layout:
     hidden: true
