Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ show_text: false
 show_carousel: true
 carousel:
   - image: /uploads/isaac-sleeps.jpg
-    alink: /gallery/painted-portraits/
+    alink: /gallery/portraits/
   - image: /uploads/at-ghost-teapot.jpg
     caption:
     alink:
