Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@ show_galleries: false
 show_text: false
 show_carousel: true
 carousel:
-  - image: /uploads/isaac-sleeps.jpg
-    alink: /gallery/portraits/
   - image: /uploads/at-ghost-teapot.jpg
     caption:
     alink:
   - image: /uploads/whisper-floating-scroll-2.jpg
+    caption:
+    alink:
+  - image: /uploads/baby-phsp-copy.jpg
     caption:
     alink:
 show_blog: false
