Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-main_image_path: /assets/images/1200-w-first-sleeps.jpg
+main_image_path:
 main_image_caption:
 show_galleries: false
 show_text: false
