--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ carousel:
   - image: /uploads/whisper-floating-scroll-2.jpg
     caption:
     alink:
+  - image: /uploads/cropped-vertical-whisper-floating-scroll-2.jpg
+    caption:
+    alink:
 show_blog: false
 posts_number:
 _options:
