Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 main_image_path:
-main_image_caption:
+main_image_caption: DRAWING, PAPER, OIL PAINT, DIGITAL PROCESSES,  PHOTOGRAPHY, INSTALLATION
 show_galleries: false
 show_text: false
 show_carousel: true
