--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ carousel:
   - image: /uploads/1200-vert-cropped-498.jpg
     caption:
     alink:
+  - image: /uploads/cropped-wedding.jpg
+    caption:
+    alink:
 show_blog: false
 posts_number:
 _options:
